# anki-ai-cards

./: .dockerignore  .env.example  .gitignore  AGENTS.md  PRD.md  PROGRESS.md  README.md
.claude/skills/spec-interview/: SKILL.md
backend/: Dockerfile  fly.toml  pyproject.toml
backend/app/: auth.py  main.py  models.py  run_server.py
backend/app/agent/: anki_template.py  core.py  model_registry.py  prompts.py  tools.py  workflow_specs.py
backend/app/agent/providers/: anthropic_provider.py  gemini_provider.py
backend/app/api/: auth.py  chat.py  images.py  workflows.py
backend/app/clients/: ankiconnect.py  dictionary.py  elevenlabs.py  forvo.py  gemini_images.py  google_docs.py  google_image_search.py  tatoeba.py  wikimedia_image_search.py
backend/scripts/: smoke_test_ankiconnect.py  smoke_test_chat.py
backend/tests/: test_agent.py  test_anki_template.py  test_ankiconnect.py  test_auth.py  test_chat.py  test_dictionary.py  test_elevenlabs.py  test_forvo.py  test_gemini_images.py  test_gemini_provider.py  test_google_docs.py  test_google_image_search.py  test_health.py  test_images_api.py  test_model_registry.py  test_models.py  test_run_server.py  test_smoke_test_ankiconnect.py  test_smoke_test_chat.py  test_tatoeba.py  test_wikimedia_image_search.py  test_workflow_specs.py  test_workflows_api.py
deploy/anki-headless/: Dockerfile  entrypoint.sh  fly.toml
docs/: manual_verification.md
frontend/: Dockerfile  fly.toml  next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
ralph/: PROMPT.md  README.md  loop.sh
(+17 files in other folders)
